--- a/PokemonGame.Architecture/PokemonGame.Architecture.csproj
+++ b/PokemonGame.Architecture/PokemonGame.Architecture.csproj
@@ -52,13 +52,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\MessageRepository.cs" />
     <Compile Include="Repository\PokemonRepository.cs" />
+    <Compile Include="Repository\RepositoryMessageBase.cs" />
     <Compile Include="Repository\RepositoryPokemonBase.cs" />
     <Compile Include="Repository\RepositoryTeamBase.cs" />
     <Compile Include="Repository\RepositoryUserBase.cs" />
     <Compile Include="Repository\TeamRepository.cs" />
     <Compile Include="Repository\UserRepository.cs" />
     <Compile Include="Services\PokemonService.cs" />
+    <Compile Include="Services\MessageService.cs" />
     <Compile Include="Services\TeamService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
